# alex_demo_build

./: CMakeLists.txt  README.md  test.cmake
build_demo_app/: CMakeLists.txt
build_demo_app/myapp/sources/: diff.patch  main.cpp
build_demo_headers/: CMakeLists.txt
build_demo_headers/utest/: CMakeLists.txt
build_demo_infra/: CMakeLists.txt
build_demo_infra/mylib1/: CMakeLists.txt
build_demo_infra/mylib2/: CMakeLists.txt
build_demo_infra/utest/: CMakeLists.txt
